# libgonc-deprecated

./: Makefile  configure.ac  gonc_node.h  gonc_queue.c  gonc_queue.h  gonc_stack.c  gonc_stack.h  gonc_vector.c  gonc_vector.h  node_test.c  queue_test  queue_test.c  stack_test  stack_test.c  vector_test.c
src/main/: Makefile.am  gonc_array_list.c  gonc_array_list.h  gonc_entry.c  gonc_entry.h  gonc_linked_list.c  gonc_linked_list.h  gonc_node.h  gonc_primitive.c  gonc_primitive.h  gonc_queue.c  gonc_queue.h  gonc_singly_linked_node.h  gonc_stack.c  gonc_stack.h  gonc_string.h  gonc_vector.c  gonc_vector.h
src/test/: array_list_test.c  gonc_array_list_test.c  gonc_entry_test.c  gonc_linked_list_test.c  gonc_node_test.c  gonc_queue_test.c  gonc_stack_test.c  linked_list_test.c  node_test.c  queue_test.c  stack_test.c  vector_test.c
