lib_LTLIBRARIES = libgonc.la
libgonc_la_SOURCES = gonc_entry.h gonc_primitive.h gonc_node.h gonc_singly_linked_node.h gonc_stack.h gonc_stack.c gonc_queue.h gonc_primitive.c gonc_queue.c gonc_array_list.h gonc_array_list.c gonc_linked_list.h gonc_linked_list.c
libgonc_la_LDFLAGS = -version-info 0:0:0
